# OINORI

./: .env.example  .gitignore  README.md  pyproject.toml
config/: asgi.py  settings.py  urls.py
main/: consumers.py  models.py  prompts.py  routing.py  views.py
main/migrations/: 0001_initial.py  0002_alter_interviewsession_options_and_more.py
main/templates/main/: history_detail.html  history_list.html  index.html  interview.html  result.html
