[project]
name = "oinori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.8",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.3",
    "faster-whisper>=1.2.1",
    "openai>=2.8.1",
    "pydub>=0.25.1",
    "pypdf>=6.5.0",
    "python-docx>=1.2.0",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tts>=0.22.0",
    "vosk>=0.3.45",
]
